Removed codesmells